k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app
spec:
  type: ClusterIP
  selector:
    app: node-app
  ports:
  - port: 80
    targetPort: http
    name: http
